# wezowy_czasooszczedzacz

./: README.md  docker-compose.dev.yml  docker-compose.yml
api_rest/: Dockerfile  pyproject.toml
api_rest/src/: main.py
