[tool.poetry]
name = "cona.api_rest"
version = "0.1.0"
description = ""
authors = ["Marek Bryling <marek@bryling.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.4"
gunicorn = "^20.1.0"
uvloop = "^0.15.2"
httptools = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
